~ Config is now a class instead of a sinleton +loadConfig -Tweet caseclass ~ScalaDoc cleanup ~Commented default.conf