@@ -10,7 +10,6 @@ object App {
       .appName("Twitter Sentiment Analyse")
       .master("local[*]")
       .config("spark.driver.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
-      .config("spark.executor.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
       .config("spark.executor.extraJavaOptions",
         "--add-opens=java.base/java.nio=ALL-UNNAMED " +
           "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED " +
